--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   qr_code_scanner: ^1.0.1
   permission_handler: ^10.2.0
   hive: ^2.2.3
+  flutter_svg: ^1.1.6
+  barcode_widget: ^2.0.3
   hive_flutter: ^1.1.0
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
